namespace go protocols.pubs
namespace netstd  protocols.pubs
struct PingMsg{
    1:i64 VerificationKey;
}