
namespace go protocols.pubs
namespace netstd  protocols.pubs
// PubkeyMsg 公钥
struct PubkeyMsg {
    1:string Key;
} 