namespace go protocols.pubs
namespace netstd  protocols.pubs
struct RequestMessage{
    1:binary msg;
} 